<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
   		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context="com.shnjcoz.fragment.CustomizedActionBar"
		>
		
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/lorem"
    	/>
        <RadioButton 
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/text_margin"
			android:text="@string/radio"
        />            
		<CheckBox 
		    android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/text_margin"
			android:text="@string/check"					    
		/>
		<Button 
		    android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/text_margin"
			android:text="@string/btn"
	    />
		<EditText 
		    android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/text_margin"
			android:ems="10"
			android:inputType="text"
		    >
		    <requestFocus />
		</EditText>
    </LinearLayout>    
</ScrollView>
